# cloudstore

./: .gitignore  LICENSE  README.md  pyproject.toml
.vim/: coc-settings.json
cloudstore/: cloud_store.py  console.py  logger.py  utils.py
src/cloudstore/: __init__.py  abstract_store.py  api.py  aws.py  azre.py  azure.py  cloud_store.py  console.py  gcp.py  utils.py
tests/: test_aws.py  test_azure.py  test_cloudstore.py  test_gcp.py  test_store.py  test_utils.py  test_version.py
